Use Base64.encoder() in ODLKeyTool
There is no point in depending on jaxb-api, just use the encoder from
java.util.

Change-Id: I67228d64beff56f41aaeafac1be285c5c5607f1f
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>